2010-09-09  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/Makefile.am: Add LIBXML2_CFLAGS and LIBXML2_LIBS.

2010-09-02  Juergen Weinberger  <gamsta@gmx.net>
	* MyErrorhandler.cpp/.hpp: Removed no longer needed
	* Makefile.am: Xerces and Xalan dependencies removed and xmllib added
	* include/xpathatom.hpp: Removed xerces and xalan; added xmllib; refactored
	* src/xpathatom.cpp: Removed xerces and xalan; added xmllib; refactored

2010-09-02  Juergen Weinberger  <gamsta@gmx.net>
	* include/: Seperated the classes into cpp and header files
	* include/Makefile.am: Added
	* include/xpathatom.hpp: Seperated the xpathatom in it's own file
	* src/xpathatom.cpp: Seperated the xpathatom in it's own file
	* src/xpathplugin.cpp: Refactored to work with the plugin interface again (boost::shared_ptr added)
	* Makefile.am: Updated to use the include dir
	* testsuit/run-dlvhex-test.sh: modified to work again

2010-07-01  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* m4/boost.m4: Updating to version currently used in dlvhex trunk.
	* bootstrap.sh: Likewise.

	* configure.ac (AC_INIT): Bump version to 1.7.0.
	 (BOOST_REQUIRE): Require boost >= 1.41.
	Require libxml2 >= 0.25.

	* README: Update.
	* NEWS: Likewise.

	* COPYING: New file.
	* COPYING.LESSER: Likewise.

	* AUTHORS: Add Juergen Weinberger.

2010-04-24  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* AUTHORS: Add necessary file.
	* NEWS: Likewise.

2010-04-23  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/Makefile.am (AUTOMAKE_OPTIONS): Remove.
	* testsuite/Makefile.am: Likewise.

	* Makefile.am (AUTOMAKE_OPTIONS): Use gnu option.
