@@ -1,0 +1,15 @@
+EXTRA_DIST = \
+    keywords.hex \
+    nobelprice.hex \
+    scientists.hex \
+    scientists.xml \
+    tests/xpath.test \
+    tests/keywords.out \
+    tests/nobelprice.out \
+    tests/scientists.out \
+	tests/run-dlvhex-tests.sh
+
+TESTS = tests/run-dlvhex-tests.sh
+TESTS_ENVIRONMENT = DLVHEX=dlvhex TESTDIR=$(top_srcdir)/examples/tests PARAMETERS="-s --plugindir=$(top_builddir)/src/.libs"
+
+DISTCLEANFILES = $(top_builddir)/examples/scientists.xml
