@@ -1,0 +1,3 @@
+../keywords.hex keywords.out
+../scientists.hex scientists.out
+../nobelprice.hex nobelprice.out
