@@ -1,3 +1,0 @@
-keywords.hex keywords.out
-scientists.hex scientists.out
-nobelprice.hex nobelprice.out
